2025年9月の学習ログを更新

--- a/2025-09.md
+++ b/2025-09.md
@@ -4,3 +4,12 @@
 - 支援士 午前II問題演習 (50/65)
 - 解説を読んで復習  
 - 重点対策 3-4 サーバセキュリティ 読み込み
+
+## 9/30
+- 重点対策 3-4 サーバセキュリティ FE,APの過去問
+    - FE 平成27年春問4,平成27年秋問4
+    - AP 平成18年秋午後I問1
+
+- picoCTF Medium Web Exploitation SOAP
+    - 挑戦したけれど、今日は解けなかった。後日再挑戦する。リアルワールドバグハンティングの11章XML外部エンティティが参考になりそうなので読んでみる。
+
