2025年11月の学習ログを更新

--- a/2025-11.md
+++ b/2025-11.md
@@ -20,3 +20,24 @@
 ## 11/14
 - 午前II演習
 - 支援士テキスト4章 情報セキュリティ基礎技術（暗号化、認証）　読了
+
+## 11/17
+- 支援士テキストp347-354
+
+## 11/18
+- 支援士テキストp355-第5章読了
+
+## 11/19
+- 支援士テキスト第6章読了
+
+## 11/21
+- 支援士テキストp471-479
+
+## 11/23
+- 支援士テキストp480-493
+
+## 11/24
+- 支援士テキスト一周
+
+## 11/25
+- 午前II演習
