2025年11月の学習ログを更新

--- a/2025-11.md
+++ b/2025-11.md
@@ -41,3 +41,27 @@
 
 ## 11/25
 - 午前II演習
+- マルウエアの教科書p38-61
+- 生成AIで作るセキュリティツール100パラパラと目を通す
+
+## 11/26
+- 午前II演習
+
+## 11/27
+- 午前II演習
+- TACテキストp1-11
+- リスニング、英単語
+
+## 11/28
+- 午前II演習
+- テキストp12-19
+- リスニング、英単語
+
+## 11/29
+- 午前II演習
+- リスニング、英単語
+
+## 11/30
+- 午前II演習
+- テキストp20-30
+- リスニング、英単語
