2026年1月の学習ログを更新

--- a/2026-01.md
+++ b/2026-01.md
@@ -129,3 +129,8 @@
 ## 1/24
 - picoCTF Web Medium caas Write Upを個人ブログに投稿しました。
 - picoCTF Web Medium login Write Upを個人ブログに投稿しました。
+
+## 1/26
+- リスニング・単語
+- 情報処理安全確保支援士問題演習（R6秋問2）
+- 午前II演習
