2026年1月の学習ログを更新

--- a/2026-01.md
+++ b/2026-01.md
@@ -154,3 +154,10 @@
 - リスニング・単語
 - 情報処理安全確保支援士問題演習（R7春問2）
 - 午前II演習
+
+## 1/31
+- リスニング・単語
+- 午前II演習
+- 支援士過去問解説読み込み（R7春問2）
+- picoCTF Web Medium SQLiLite
+- picoCTF Web Medium Irish-Name-Repo2
